<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/etTaskName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/task_title_hint"
        android:inputType="text" />

    <EditText
        android:id="@+id/etTaskDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/task_description_hint"
        android:inputType="textMultiLine" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/start_date" />

    <EditText
        android:id="@+id/etStartDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/date_hint"
        android:inputType="date" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/end_date" />

    <EditText
        android:id="@+id/etEndDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/date_hint"
        android:inputType="date" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/select_a_physician" />

    <Spinner
        android:id="@+id/spPhysicians"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/select_a_physician"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/add_photo_to_task" />

    <!-- Horizontal LinearLayout to contain the buttons -->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="16dp">

        <Button
            android:id="@+id/btnTakePhoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/take_photo"
            android:backgroundTint="#7932a8"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            app:cornerRadius="5dp"
            android:layout_marginEnd="16dp" />

        <Button
            android:id="@+id/btnSelectImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_image"
            android:backgroundTint="#7932a8"
            android:textColor="@android:color/white"
            app:cornerRadius="5dp"
            android:textSize="18sp"/>
    </LinearLayout>

    <Button
        android:id="@+id/btnCreateTask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#7932a8"
        app:cornerRadius="5dp"
        android:text="@string/add_task"/>

    <ImageView
        android:id="@+id/IVPreviewImage"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:visibility="gone"
        android:contentDescription="@string/cd_preview_image"
        android:src="@android:drawable/ic_menu_camera"/>

</LinearLayout>