<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <TextView
        android:id="@+id/labelAppointmentId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/label_title"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/appointmentId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/appointment_title_placeholder"
        app:layout_constraintStart_toEndOf="@+id/labelAppointmentId"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/labelAppointmentStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/label_status"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/appointmentStatus"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/appointmentStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/appointment_status_placeholder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/labelAppointmentPhysician"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/label_physician"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelAppointmentId" />

    <TextView
        android:id="@+id/appointmentPhysician"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/assigned_physician"
        app:layout_constraintStart_toEndOf="@+id/labelAppointmentPhysician"
        app:layout_constraintTop_toBottomOf="@+id/appointmentId" />

    <TextView
        android:id="@+id/labelAppointmentDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/label_date"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/appointmentDate"
        app:layout_constraintTop_toBottomOf="@+id/labelAppointmentStatus" />

    <TextView
        android:id="@+id/appointmentDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/appointment_date_placeholder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appointmentStatus" />

    <TextView
        android:id="@+id/labelAppointmentPatient"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/label_patient"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelAppointmentPhysician" />

    <TextView
        android:id="@+id/appointmentPatient"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/assigned_patient"
        app:layout_constraintStart_toEndOf="@+id/labelAppointmentPatient"
        app:layout_constraintTop_toBottomOf="@+id/appointmentPhysician" />

    <TextView
        android:id="@+id/labelAppointmentTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/label_time"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/labelAppointmentDate"
        app:layout_constraintEnd_toStartOf="@+id/appointmentTime" />

    <TextView
        android:id="@+id/appointmentTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/appointment_time_placeholder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appointmentDate" />

    <TextView
        android:id="@+id/labelAppointmentNotes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/label_notes"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelAppointmentPatient" />

    <TextView
        android:id="@+id/appointmentNotes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/appointment_notes_placeholder"
        app:layout_constraintStart_toEndOf="@+id/labelAppointmentPatient"
        app:layout_constraintTop_toBottomOf="@+id/appointmentPatient" />

</androidx.constraintlayout.widget.ConstraintLayout>